@@ -1,0 +1,41 @@
+// Copyright (C) 2019 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+// { dg-options "-std=gnu++2a" }
+// { dg-do compile { target c++2a } }
+
+#include <iterator>
+
+template<typename T>
+  using PI = std::projected<T, std::identity>;
+
+static_assert(std::same_as<PI<int*>::value_type, int>);
+static_assert(std::same_as<decltype(*std::declval<const PI<int*>&>()), int&>);
+
+struct X
+{
+  using value_type = char*;
+  char* const& operator*() &;
+};
+static_assert( std::readable<X> );
+static_assert(std::same_as<PI<X>::value_type, char*>);
+static_assert(std::same_as<decltype(*std::declval<PI<X>&>()), char* const&>);
+
+struct Y;
+using PY = std::projected<const Y*, int Y::*>;
+static_assert(std::same_as<PY::value_type, int>);
+static_assert(std::same_as<decltype(*std::declval<PY&>()), const int&>);
