@@ -1,3 +1,9 @@
+2019-12-10  Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/bits/iterator_concepts.h (indirect_result_t): Do not apply
+	iter_reference_t to parameter pack.
+	* testsuite/24_iterators/indirect_callable/projected.cc: New test.
+
 2019-12-09  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/bits/range_access.h (ranges::enable_safe_range): Define.
